--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,4 +31,4 @@ jobs:
         run: flake8 --exclude=venv .
 
       - name: Run Pylint
-        run: pylint --exclude=venv .
+        run: pylint --ignore=venv .
