--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -30,4 +30,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Test with Python
-        run: echo -e "y" | python main.py
+        run: echo "1" | python main.py
